# pipeline_local

curso_git/: arquivo 02.txt  arquivo01.txt  comandos_bash.txt  comandos_git.txt
project_ETL/pipeline_local/: .gitignore  README.md  eng_eba.db  pipeline.py  pyproject.toml  teste.ipynb
projetos/ludovina-magalhaes.github.io-main/ludovina-magalhaes.github.io-main/: index.html  script.js  style.css
